# tajdidlinux

./: README.md
about-tajdid/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
about-tajdid/src/: Makefile.am  Makefile.in  about_tajdid.ui  callbacks.c  callbacks.h  main.c  tampil.c  tampil.h
ayat-semesta/: ayat-ayat-semesta.xml
hijra/: hijra-autostart.desktop  setup.py
hijra/debian/: HijriApplet.1  changelog  control  copyright  hijra-applet.install  hijra-applet.links  hijra-applet.manpages  hijra-applet.menu  python-hijra.install  rules  watch
hijra/debian/patches/: desktop.diff  series  setup_debian.diff
kauman-desktop/: kauman-wallpapers.xml
kauman-desktop/debian/: changelog  control  copyright  install  kauman-desktop.postinst  rules
kauman-desktop/kauman-desktop/: 01_kauman-desktop  02_aplikasi
kauman-desktop/kauman-ikon/: index.theme
minbar/: Makefile.in  aclocal.m4  configure
minbar/data/: Makefile.in  minbar.schemas  minbar.schemas.in
minbar/debian/: changelog  control  minbar-data.install  rules
minbar/debian/patches/: audio_ARA-10986_DEB-527282.diff  desktop-encoding.diff  desktop-islamic-category.diff  fix-Makefile.diff  fix_man.diff  notification_ARA-11250_DEB-528451.diff  series
minbar/doc/: Makefile.in
minbar/pixmaps/: Makefile.in
minbar/pixmaps/icons/: Makefile.in
minbar/src/: Makefile.in
plymouth-theme-tajdid/: pencerah.plymouth  pencerah.script
plymouth-theme-tajdid/debian/: changelog  control  copyright  install  plymouth-theme-tajdid.postinst  plymouth-theme-tajdid.postrm
(+6 files in other folders)
